// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review Recovery Phrase Component renders match snapshot when isFromReminder and isFromSettingsSecurity are present in the search params 1`] = `
<div>
  <div
    class="mm-box recovery-phrase mm-box--display-flex mm-box--gap-6 mm-box--flex-direction-column mm-box--justify-content-space-between mm-box--align-items-center mm-box--height-full"
    data-testid="recovery-phrase"
  >
    <div
      class="mm-box"
    >
      <div
        class="mm-box recovery-phrase__header mm-box--margin-bottom-4 mm-box--display-grid mm-box--gap-3 mm-box--align-items-center mm-box--width-full"
      >
        <button
          aria-label="Back"
          class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="reveal-recovery-phrase-review-back-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-left.svg');"
          />
        </button>
        <h4
          class="mm-box mm-text mm-text--heading-sm mm-text--text-align-center mm-box--color-text-default"
        >
          Save Secret Recovery Phrase
        </h4>
        <button
          aria-label="Close"
          class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="reveal-recovery-phrase-review-close-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/close.svg');"
          />
        </button>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-6"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-6 mm-box--color-text-alternative"
        >
          <span>
             
            This is your 
            <button
              class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            >
              Secret Recovery Phrase
            </button>
            . Write it down in the correct order and keep it safe. If someone has your Secret Recovery Phrase, they can access your wallet. Don’t share it with anyone, ever.
             
          </span>
        </p>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
      >
        <div
          class="mm-box recovery-phrase__secret mm-box--display-grid mm-box--width-full mm-box--background-color-background-section mm-box--rounded-lg"
        >
          <div
            class="mm-box recovery-phrase__chips recovery-phrase__chips--hidden mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
            data-quiz-words="[]"
            data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
            data-testid="recovery-phrase-chips"
          >
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-0"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                1
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                candy
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-1"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                2
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                maple
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-2"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                3
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                cake
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-3"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                4
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                sugar
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-4"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                5
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                pudding
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-5"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                6
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                cream
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-6"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                7
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                honey
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-7"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                8
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                rich
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-8"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                9
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                smooth
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-9"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                10
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                crumble
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-10"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                11
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                sweet
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-11"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                12
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                treat
              </span>
            </div>
          </div>
          <div
            class="mm-box recovery-phrase__secret-blocker-container mm-box--width-full mm-box--height-full"
          >
            <div
              class="mm-box recovery-phrase__secret-blocker mm-box--padding-top-2 mm-box--padding-bottom-9 mm-box--padding-inline-0 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--height-full mm-box--rounded-sm"
            />
            <button
              class="mm-box recovery-phrase__secret-blocker-text mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--height-full mm-box--background-color-transparent"
              data-testid="recovery-phrase-reveal"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-default"
                style="mask-image: url('./images/icons/eye-slash.svg');"
              />
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-default"
              >
                Tap to reveal
              </p>
              <p
                class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
              >
                Make sure no one is watching your screen.
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--disabled recovery-phrase__footer--button mm-button-primary mm-button-primary--disabled mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
        data-testid="recovery-phrase-continue"
        disabled=""
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;

exports[`Review Recovery Phrase Component should match snapshot 1`] = `
<div>
  <div
    class="mm-box recovery-phrase mm-box--display-flex mm-box--gap-6 mm-box--flex-direction-column mm-box--justify-content-space-between mm-box--align-items-center mm-box--height-full"
    data-testid="recovery-phrase"
  >
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--margin-bottom-4 mm-box--justify-content-flex-start mm-box--width-full"
      >
        <h2
          class="mm-box mm-text mm-text--heading-lg mm-box--color-text-default"
        >
          Save your Secret Recovery Phrase
        </h2>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-6"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-6 mm-box--color-text-alternative"
        >
          <span>
             
            This is your 
            <button
              class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            >
              Secret Recovery Phrase
            </button>
            . Write it down in the correct order and keep it safe. If someone has your Secret Recovery Phrase, they can access your wallet. Don’t share it with anyone, ever.
             
          </span>
        </p>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
      >
        <div
          class="mm-box recovery-phrase__secret mm-box--display-grid mm-box--width-full mm-box--background-color-background-section mm-box--rounded-lg"
        >
          <div
            class="mm-box recovery-phrase__chips recovery-phrase__chips--hidden mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
            data-quiz-words="[]"
            data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
            data-testid="recovery-phrase-chips"
          >
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-0"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                1
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                candy
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-1"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                2
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                maple
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-2"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                3
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                cake
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-3"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                4
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                sugar
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-4"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                5
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                pudding
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-5"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                6
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                cream
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-6"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                7
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                honey
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-7"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                8
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                rich
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-8"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                9
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                smooth
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-9"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                10
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                crumble
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-10"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                11
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                sweet
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-11"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                12
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                treat
              </span>
            </div>
          </div>
          <div
            class="mm-box recovery-phrase__secret-blocker-container mm-box--width-full mm-box--height-full"
          >
            <div
              class="mm-box recovery-phrase__secret-blocker mm-box--padding-top-2 mm-box--padding-bottom-9 mm-box--padding-inline-0 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--height-full mm-box--rounded-sm"
            />
            <button
              class="mm-box recovery-phrase__secret-blocker-text mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--height-full mm-box--background-color-transparent"
              data-testid="recovery-phrase-reveal"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-default"
                style="mask-image: url('./images/icons/eye-slash.svg');"
              />
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-default"
              >
                Tap to reveal
              </p>
              <p
                class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
              >
                Make sure no one is watching your screen.
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--disabled recovery-phrase__footer--button mm-button-primary mm-button-primary--disabled mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
        data-testid="recovery-phrase-continue"
        disabled=""
      >
        Continue
      </button>
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-link mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-primary-default mm-box--background-color-transparent"
        data-testid="recovery-phrase-remind-later"
        type="button"
      >
        Remind me later
      </button>
    </div>
  </div>
</div>
`;

exports[`Review Recovery Phrase Component should match snapshot after reveal recovery button is clicked 1`] = `
<div>
  <div
    class="mm-box recovery-phrase mm-box--display-flex mm-box--gap-6 mm-box--flex-direction-column mm-box--justify-content-space-between mm-box--align-items-center mm-box--height-full"
    data-testid="recovery-phrase"
  >
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--margin-bottom-4 mm-box--justify-content-flex-start mm-box--width-full"
      >
        <h2
          class="mm-box mm-text mm-text--heading-lg mm-box--color-text-default"
        >
          Save your Secret Recovery Phrase
        </h2>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-6"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-6 mm-box--color-text-alternative"
        >
          <span>
             
            This is your 
            <button
              class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            >
              Secret Recovery Phrase
            </button>
            . Write it down in the correct order and keep it safe. If someone has your Secret Recovery Phrase, they can access your wallet. Don’t share it with anyone, ever.
             
          </span>
        </p>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
      >
        <div
          class="mm-box recovery-phrase__secret mm-box--display-grid mm-box--width-full mm-box--background-color-background-section mm-box--rounded-lg"
        >
          <div
            class="mm-box recovery-phrase__chips mm-box--display-grid mm-box--justify-content-center mm-box--align-items-center"
            data-quiz-words="[]"
            data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
            data-testid="recovery-phrase-chips"
          >
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-0"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                1
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                debris
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-1"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                2
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                dizzy
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-2"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                3
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                just
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-3"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                4
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                program
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-4"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                5
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                just
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-5"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                6
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                float
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-6"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                7
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                decrease
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-7"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                8
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                vacant
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-8"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                9
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                alarm
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-9"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                10
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                reduce
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-10"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                11
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                speak
              </span>
            </div>
            <div
              class="mm-box recovery-phrase__text mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-inline-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
              data-testid="recovery-phrase-chip-11"
            >
              <span
                class="mm-box mm-text recovery-phrase__word-index mm-text--inherit mm-box--color-text-alternative"
              >
                12
                .
              </span>
              <span
                class="mm-box mm-text mm-text--inherit mm-box--color-text-default"
              >
                stadium
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg recovery-phrase__footer--button mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
        data-testid="recovery-phrase-continue"
      >
        Continue
      </button>
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-link mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-primary-default mm-box--background-color-transparent"
        data-testid="recovery-phrase-remind-later"
        type="button"
      >
        Remind me later
      </button>
    </div>
  </div>
</div>
`;
